passing server properties to react create

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 
-#renderer
+#renderer{"data-props" => '{"url_name": "testing"}'}
   = javascript_include_tag 'bundles/quiz-bundle'
 
 
