--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,10 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_tag do
+      var QM = QM || {};
+      QM.CONST = {};
+      QM.CONST.CSRF_TOKEN  = '#{form_authenticity_token}'
   %body
     .container-fluid
       %nav.navbar.navbar-light.bg-faded
