--- a/app/views/outcomes/show.html.haml
+++ b/app/views/outcomes/show.html.haml
@@ -1,6 +1,6 @@
 .outcome-box
   %h3 
     =@outcome.title
-  /= image_tag("/assets/images/" + @output.main_image.path, class: "img-fluid")
+  = image_tag("/assets/images/" + @outcome.main_image.path, class: "img-fluid")
   .outcome-description.well
     = @outcome.description
