--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,17 +1,30 @@
-.quiz-list{
-  .card-header{
-    background: repeating-linear-gradient(
+
+.img-ref{
+  font-size: 10px;
+  color: #BDBDBD;
+  a{
+    color: #8181F7;
+  }
+}
+
+.heading-bk{
+  background: repeating-linear-gradient(
       45deg,
       #606dbc,
       #606dbc 3px,
       #465298 3px,
       #465298 6px
     );
+  color: white;
+  font-weight: bold;
+}
+
+
+.quiz-list{
+  .card-header{
+    
   }
-  .card-title{
-    font-weight: bold;
-    color: white;
-  }
+  
   h3{
     margin-bottom: 5px;
     margin-top:5px;
