--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -4,10 +4,10 @@
     - @quizzes.each do |quiz|
       .col-xs-12.col-sm-6.col-md-4
         .card.text-md-center.card-outline-primary
-          .card-header
+          .card-header.heading-bk
             %h4.card-title
               = quiz.title
-          .card-block
+          .card-block.text-md-center
             = image_tag("/assets/images/" + quiz.main_image.path, class: "img-fluid")
             = img_reference(quiz.main_image)
           .card-block
