remove about from top

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,9 +22,9 @@
               %li.nav-item
                 = link_to quizzes_path, class: 'nav-link'  do
                   Quizzes
-              %li.nav-item
-                %a.nav-link{:href => "#"}
-                  About
+    -#           %li.nav-item
+    -#             %a.nav-link{:href => "#"}
+    -#               About
     .container
       .row
         .col-md-12
