--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     = csrf_meta_tags
     = display_meta_tags default_meta_tags
+    %meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_tag do
