--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -1,7 +1,7 @@
 .pull-right
   %ul.nav.navbar-nav
     -if current_user
-      %li=link_to 'Logout', destroy_user_session_path, :method => :delete
+      %li.nav-item=link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'nav-link'
     -else
-      %li=link_to 'Register', new_user_registration_path
-      %li=link_to 'Login', new_user_session_path
+      %li.nav-item=link_to 'Register', new_user_registration_path, class: 'nav-link'
+      %li.nav-item=link_to 'Login', new_user_session_path, class: 'nav-link' 
