add basic quiz create edit page

--- a/app/views/layouts/client/application.html.haml
+++ b/app/views/layouts/client/application.html.haml
@@ -9,7 +9,7 @@
         %nav
           %ul.nav.nav-sidebar
             %li
-              =link_to 'test', client_quizzes_path
+              =link_to 'My Quizzes', client_quizzes_path
       .col-xs-9.col-md-10
         = render '/layouts/notice'
         = yield
