--- a/app/views/client/quizzes/index.html.haml
+++ b/app/views/client/quizzes/index.html.haml
@@ -1,12 +1,17 @@
+%h3 
+  My Quizzes
+=link_to 'Add New Quiz', new_client_quiz_path, class: 'btn btn-primary'
 .quiz-list
-  %ul
+  %ul.list-group
     - @quizzes.each do |quiz|
-      %li
+      %li.list-group-item.list-group-item-action
         .row
+          .col-md-2
+            = image_tag("/assets/images/" + quiz.main_image.path, class: "img-fluid img-thumbnail") if quiz.main_image
           .col-md-4
             = quiz.title
           .col-md-4
-            = quiz.main_image.path
-          .col-md-4
-            = quiz.description
-
+            No Questions:
+            = quiz.questions.count
+          .col-md-2
+            = link_to 'Edit', edit_client_quiz_path(quiz)
