--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -7,8 +7,8 @@
             %h4.card-title
               = quiz.title
           .card-block.text-md-center
-            = image_tag("/assets/images/" + quiz.main_image.path, class: "img-fluid")
-            = img_reference(quiz.main_image)
+            = image_full quiz.image
+            = img_reference(quiz.image)
           .card-block
             .card-text
               = quiz.description
