--- a/app/views/client/quizzes/edit.html.haml
+++ b/app/views/client/quizzes/edit.html.haml
@@ -1,3 +1,8 @@
 %h3
   Edit Quiz 
-=render 'form'
+=render partial:'form'
+=link_to 'Add Questions', new_client_quiz_question_path(@quiz), remote: :true, class: "btn btn-primary"
+#new_question_form
+#question_list
+  =render partial:'client/questions/question_list', locals: { questions: @quiz.questions }
+
