--- a/app/views/client/questions/show.js.erb
+++ b/app/views/client/questions/show.js.erb
@@ -1,1 +1,1 @@
-$("#new_question_form").replaceWith("<%= escape_javascript(render partial: 'form') %>");
+$("#new_question_form").html("<%= escape_javascript(render partial: 'form') %>");
