--- a/app/views/client/questions/update.js.erb
+++ b/app/views/client/questions/update.js.erb
@@ -1,1 +1,2 @@
-$("#new_question_form").html("<%= escape_javascript(render partial: 'form') %>");
+$("#new_question_form").html("");
+$("#question_list").html("<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
