--- a/app/views/client/questions/_form.html.haml
+++ b/app/views/client/questions/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [:client, @quiz, @question_form], class: 'project', remote: true  do |f|
+= form_for [:client, @quiz, @question_form], html:{ multipart: :true }, authenticity_token: true, class: 'project', remote: true  do |f|
   - if @question_form.errors.any?
     #error_explanation
       %h4= "#{pluralize(@question_form.errors.count, "Fehler")}:"
