--- a/app/views/client/quizzes/index.html.haml
+++ b/app/views/client/quizzes/index.html.haml
@@ -15,3 +15,4 @@
             = quiz.questions.count
           .col-md-2
             = link_to 'Edit', edit_client_quiz_path(quiz)
+            = link_to 'Remove', client_quiz_path(quiz), data: {confirm: 'Are you sure?'}, method: :delete
