forms all working

--- a/app/views/client/questions/update.js.erb
+++ b/app/views/client/questions/update.js.erb
@@ -1,2 +1,2 @@
-$("#new_question_form").html("");
+$("#question_form").html("");
 $("#question_list").html("<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
