--- a/app/views/client/questions/_form.html.haml
+++ b/app/views/client/questions/_form.html.haml
@@ -18,16 +18,6 @@
     .col-sm-10
       = f.number_field :order_by, class: "form-control"
   =f.fields_for :image do |ff|
-    .image
-      = image_full ff.object, class:"img-thumbnail"
-    .form-group
-      = ff.label :image_file
-      .col-sm-10
-        = ff.file_field :image_file
-  -# =f.fields_for :answers do |ff|
-  -#   .form-group
-  -#     = f.label :title, class: "col-sm-2"
-  -#     .col-sm-10
-  -#       = ff.text_field :title, class: "form-control"
+    =render partial:'image_form', locals: { f: ff }
   .actions
     = f.submit 'Save', class: "btn btn-primary"
