--- a/app/views/client/questions/create.js.erb
+++ b/app/views/client/questions/create.js.erb
@@ -1,1 +1,1 @@
-$("#new_question_form").html("<%= escape_javascript(render partial: 'form') %>");
+$("#question_form").html("<%= escape_javascript(render partial: 'form') %>");
