--- a/app/views/client/questions/edit.js.erb
+++ b/app/views/client/questions/edit.js.erb
@@ -1,1 +1,3 @@
-$("#question_form").html("<%= escape_javascript(render partial: 'form') %>");
+$('<%= "#question_#{@question.id}" %>').html("<%= escape_javascript(render partial: 'form') %>");
+  
+  
