--- a/app/views/client/quizzes/_form.html.haml
+++ b/app/views/client/quizzes/_form.html.haml
@@ -1,7 +1,7 @@
 = form_for [:client, @quiz_form],html:{ multipart: :true }, authenticity_token: true, class: 'project', remote: @quiz_form.persisted? do |f|
   - if @quiz_form.errors.any?
     #error_explanation
-      %h4= "#{pluralize(@quiz_form.errors.count, "Fehler")}:"
+      %h4= "#{pluralize(@quiz_form.errors.count, "errors")}:"
       %ul
         - @quiz_form.errors.full_messages.each do |msg|
           %li= msg
@@ -19,5 +19,6 @@
       = f.text_field :description, class: "form-control"
   = f.fields_for :image do |ff|
     =render partial:'image_form', locals: { f: ff }
-  .actions
+  .actions.pull-right
+    =  link_to 'Cancel', edit_client_quiz_path(@quiz_form), class: "btn btn-default"
     = f.submit 'Save', class: "btn btn-primary"
