publish upload dir

--- a/app/views/client/questions/_answer_form.html.haml
+++ b/app/views/client/questions/_answer_form.html.haml
@@ -1,4 +1,4 @@
-%li.list-group-item.list-group-item-action
+%li.answer.list-group-item.list-group-item-action
   .row
     .col-md-7
       = f.label  :title, class: "sr-only"
