--- a/app/views/client/questions/create.js.erb
+++ b/app/views/client/questions/create.js.erb
@@ -1,2 +1,3 @@
 $("#question_form").html("");
-$("#question_form").html("<%= escape_javascript(render partial: 'form') %>");
+$("#question_list").html("<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
+
