--- a/app/views/client/questions/_question_list.html.haml
+++ b/app/views/client/questions/_question_list.html.haml
@@ -13,4 +13,4 @@
               = question.answers.count
             .col-md-2
               = link_to 'Edit', edit_client_quiz_question_path(question.quiz,question), remote: true
-              = link_to 'Remove', client_quiz_question_path(question.quiz, question), data: {confirm: 'Are you sure?'}, method: :delete
+              = link_to 'Remove', client_quiz_question_path(question.quiz, question), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
