--- a/app/views/client/questions/index.js.erb
+++ b/app/views/client/questions/index.js.erb
@@ -1,2 +1,3 @@
+$("#question_form").html("");
 $("#question_list").html("<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
 
