--- a/app/views/client/quizzes/index.html.haml
+++ b/app/views/client/quizzes/index.html.haml
@@ -14,6 +14,6 @@
             No Questions:
             = quiz.questions.count
           .col-md-2
-            = link_to 'Edit', edit_client_quiz_path(quiz)
+            = link_to 'Edit', client_quiz_path(quiz)
             = link_to 'publish', client_publish_quiz_path(quiz), method: :patch, remote:true
             = link_to 'Remove', client_quiz_path(quiz), data: {confirm: 'Are you sure?'}, method: :delete
