--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -15,5 +15,6 @@
     = f.password_field :password_confirmation, autocomplete: "off" , class: 'form-control'
   .actions
     = f.submit "Sign up", class: 'btn btn-primary'
+    = link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path
 = render "devise/shared/links"
 
