--- a/app/views/client/quizzes/show.html.haml
+++ b/app/views/client/quizzes/show.html.haml
@@ -11,15 +11,23 @@
         = @quiz.description
     .card-footer.text-md-right
       = link_to 'Edit', edit_client_quiz_path(@quiz), class: "btn btn-default"
-#questions
-  %h4 Questions
-  =link_to 'Add Questions', new_client_quiz_question_path(@quiz), remote: :true, class: "btn btn-primary"
-  #question_form
-  #question_list
-    =render partial:'client/questions/question_list', locals: { questions: @quiz.questions }
-#outcomes
-  %h4 Outcomes
-  =link_to 'Add Outcomes', new_client_quiz_outcome_path(@quiz), remote: :true, class: "btn btn-primary"
-  #outcome_form
-  #outcome_list
-    =render partial:'client/outcomes/outcome_list', locals: { outcomes: @quiz.outcomes }
+%ul.nav.nav-tabs
+  %li.nav-item
+    =link_to "Questions", "#questions_tab", class:"nav-link active", "data-toggle": "tab", role:"tab"
+  %li.nav-item
+    =link_to "Outcomes","#outcomes_tab", class:"nav-link", "data-toggle": "tab", role:"tab"
+.tab-content
+  .tab-pane.active{id:"questions_tab"}
+    #questions
+      %h4.text-sm-center  Questions
+      =link_to 'New Question', new_client_quiz_question_path(@quiz), remote: :true, class: "btn btn-primary"
+      #question_form
+      #question_list
+        =render partial:'client/questions/question_list', locals: { questions: @quiz.questions }
+  .tab-pane{id:"outcomes_tab"}
+    #outcomes
+      %h4.text-sm-center Outcomes
+      =link_to 'New Outcome', new_client_quiz_outcome_path(@quiz), remote: :true, class: "btn btn-primary"
+      #outcome_form
+      #outcome_list
+        =render partial:'client/outcomes/outcome_list', locals: { outcomes: @quiz.outcomes }
