--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -2,7 +2,7 @@
   %ul.nav.navbar-nav
     -if current_user
       %li.nav-item
-        = link_to edit_user_registration_path, class: 'nav-link'  do
+        = link_to edit_users_path, class: 'nav-link'  do
           = image_tag current_user.avatar.url, alt: current_user.name, class: 'img rounded-circle', height: 50, width:50
       %li.nav-item=link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'nav-link'
     -else
