--- a/app/views/layouts/profile.html.haml
+++ b/app/views/layouts/profile.html.haml
@@ -8,7 +8,9 @@
         %nav
           %ul.nav.nav-sidebar
             %li
-              =link_to 'My Account', edit_user_registration_path
+              =link_to 'My Profile', edit_users_path
+            %li
+              =link_to 'Change Password', edit_user_registration_path
       .col-xs-9.col-md-10
         = render '/layouts/notice'
         = yield
