add fade in out

--- a/app/views/client/outcomes/new.js.erb
+++ b/app/views/client/outcomes/new.js.erb
@@ -1,1 +1,2 @@
-$("#outcome_form").html("<%= escape_javascript(render partial: 'form') %>");
+General.replaceContentWithFade("#outcome_form", "<%= escape_javascript(render partial: 'form') %>");
+
