--- a/app/views/client/questions/new.js.erb
+++ b/app/views/client/questions/new.js.erb
@@ -1,1 +1,1 @@
-$("#question_form").html("<%= escape_javascript(render partial: 'form') %>");
+General.replaceContentWithFade("#question_form","<%= escape_javascript(render partial: 'form') %>")
