--- a/app/views/client/outcomes/_outcome_list.html.haml
+++ b/app/views/client/outcomes/_outcome_list.html.haml
@@ -1,15 +1,4 @@
 .outcome-list
   %ul.list-group
     - outcomes.each do |outcome|
-      %li.list-group-item.list-group-item-action
-        %div{ id:"outcome_#{outcome.id}" }
-          .row
-            .col-md-2
-              = image_full outcome.image
-            .col-md-4
-              = outcome.title
-            .col-md-4
-              = outcome.percentage_to
-            .col-md-2
-              = link_to 'Edit', edit_client_quiz_outcome_path(outcome.quiz,outcome), remote: true
-              = link_to 'Remove', client_quiz_outcome_path(outcome.quiz, outcome), data: {confirm: 'Are you sure?'}, method: :delete, remote: true
+      = render partial: 'client/outcomes/outcome_item', locals: { outcome: outcome}
