--- a/app/views/client/outcomes/edit.js.erb
+++ b/app/views/client/outcomes/edit.js.erb
@@ -1,1 +1,1 @@
-$('<%= "#outcome_#{@outcome.id}" %>').html("<%= escape_javascript(render partial: 'form') %>");
+General.replaceContentWithFade('<%= "#outcome_#{@outcome.id}" %>', "<%= escape_javascript(render partial: 'form') %>");
