--- a/app/views/client/questions/index.js.erb
+++ b/app/views/client/questions/index.js.erb
@@ -1,3 +1,4 @@
 $("#question_form").html("");
-$("#question_list").html("<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
+General.replaceContentWithFade("#question_list", "<%= escape_javascript(render partial:'question_list', locals: { questions: @quiz.questions })%>")
+
 
