--- a/app/views/client/quizzes/_quiz_item.html.haml
+++ b/app/views/client/quizzes/_quiz_item.html.haml
@@ -2,14 +2,22 @@
   .row
     .col-md-2
       = image_full quiz.image
-    .col-md-4
+    .col-md-3
       = quiz.title
-    .col-md-4
+    .col-md-3
       No Questions:
       = quiz.questions.count
     .col-md-2
-      = link_to 'Edit', client_quiz_path(quiz) 
-      = link_to 'Preview', quiz_path(quiz, preview:true)
-      = link_to 'Publish', client_publish_quiz_path(quiz), method: :patch, remote:true
-      = link_to 'Remove', client_quiz_path(quiz), data: {confirm: 'Are you sure?'}, method: :delete
+      = quiz.status
+    .col-md-2
+      
+      
+      -if quiz.published?
+        = link_to 'View', quiz_path(quiz), :target => '_blank' 
+        = link_to 'Unpublish', client_unpublish_quiz_path(quiz), method: :patch, remote:true
+      -else
+        = link_to 'Edit', client_quiz_path(quiz) 
+        = link_to 'Preview', quiz_path(quiz, preview:true)
+        = link_to 'Publish', client_publish_quiz_path(quiz), method: :patch, remote:true
+        = link_to 'Delete', client_quiz_path(quiz), data: {confirm: 'Are you sure?'}, method: :delete
 
